# sibsau-timetable-frontend

./: README.md  pyproject.toml
app/: bot.py  broker.py  cacher.py  config.py  database.py  database_searcher.py  main.py  parser_types.py  profiler.py
app/windows/: __init__.py  states.py  timetable.py  tutorial.py  wait_for_entity_choose.py
app/windows/public/: 1.html  10.html  12.html  15.html  16.html  19.html  2.html  20.html  3.html  30.html  4.html  7.html  8.html
