[project]
name = "sibsau-timetable-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiogram>=3.19.0",
    "aiogram-dialog>=2.3.1",
    "asyncio-redis>=0.16.0",
    "beanie>=1.29.0",
    "beautifulsoup4>=4.13.3",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "tabulate>=0.9.0",
    "var-dump>=1.2",
]
